Adjust cluster args (code + gradle)